force-app/main/default/objects/pse__ProjectVarianceBatch__c/pse__ProjectVarianceBatch__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__projectVarianceBatchHelp</customHelpPage>
    <description>Stores the status and details of Project Variance Batch Apex jobs.</description>
    <label>Project Variance Batch</label>
    <nameField>
        <displayFormat>PVB-{000000}</displayFormat>
        <label>Project Variance Batch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Variance Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>