force-app/main/default/objects/pse__ProjectVarianceBatch__c/fields/pse__TotalNumberOfExternal__c.field-meta.xml
<CustomField>
    <fullName>pse__TotalNumberOfExternal__c</fullName>
    <description>The number of logs where Log Type is External.</description>
    <inlineHelpText>The number of logs where Log Type is External.</inlineHelpText>
    <label>Total Number of External</label>
    <summaryFilterItems>
        <field>pse__ProjectVarianceBatchLog__c.pse__LogType__c</field>
        <operation>equals</operation>
        <value>External</value>
    </summaryFilterItems>
    <summaryForeignKey>pse__ProjectVarianceBatchLog__c.pse__ProjectVarianceBatch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>